tests/baselines/reference/promiseChaining1.errors.txt
promiseChaining1.ts(7,55): error TS2322: Type 'string' is not assignable to type 'Function'.
promiseChaining1.ts(7,84): error TS2322: Type 'number' is not assignable to type 'Function'.


==== promiseChaining1.ts (2 errors) ====
    // same example but with constraints on each type parameter
    class Chain2<T extends { length: number }> {
        constructor(public value: T) { }
        then<S extends Function>(cb: (x: T) => S): Chain2<S> {
            var result = cb(this.value);
            // should get a fresh type parameter which each then call
            var z = this.then(x => result)/*S*/.then(x => "abc")/*Function*/.then(x => x.length)/*number*/; // Should error on "abc" because it is not a Function
                                                          ~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'Function'.
!!! related TS6502 promiseChaining1.ts:4:34: The expected type comes from the return type of this signature.
                                                                                       ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'Function'.
!!! related TS6502 promiseChaining1.ts:4:34: The expected type comes from the return type of this signature.
            return new Chain2(result);
        }
    }